--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <div id="game">
       <a id="start" href="javascript:start()">START</a>
+      <a id="end" href="javascript:retry()">GAME OVER
+        <br />
+        <small class="msg">Try Again</small>
+      </a> 
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script src="index.js"></script>
